@@ -1,6 +1,7 @@
 package dragon.t;
 
 import dragon.server.Server;
+import dragon.server.Service;
 import dragon.server.mResources;
 
 import java.util.ArrayList;
@@ -11,215 +12,216 @@ import java.util.ArrayList;
  * @author TGDD
  */
 public class Boss {
-    
+
     public short[] petInfoHead;
-    
-    public int[] botId = new int[] {
-        168,
-        167,
-        62,
-        61,
-        60,
-        59,
-        58,
-        63,
-        69,
-        70,
-        68,
-        67,
-        72,
-        71,
-        73,
-        74,
-        23,
-        4,
-        1,
-        51,
-        50,
-        49,
-        48,
-        47,
-        114,
-        113,
-        112,
-        111,
-        110,
-        169
+
+    public int[] botId = new int[]{
+            168,
+            167,
+            62,
+            61,
+            60,
+            59,
+            58,
+            63,
+            69,
+            70,
+            68,
+            67,
+            72,
+            71,
+            73,
+            74,
+            23,
+            4,
+            1,
+            51,
+            50,
+            49,
+            48,
+            47,
+            114,
+            113,
+            112,
+            111,
+            110,
+            169
     };
-    
-    public int[] botSetTime = new int[] {
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        900000,
-        1800000,
-        1800000,
-        1800000, 
-        1800000,
-        1800000,
-        1800000,
-        1800000,
-        1800000,
-        1800000,
-        1800000,
-        1800000,
-        1800000,
-        1800000,
-        1800000
+
+    public int[] botSetTime = new int[]{
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            900000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000,
+            1800000
     };
-    
-    public int[] botTimeHs = new int[] {
-        60000,
-        60000,
-        70000,
-        73000,
-        76000,
-        79000,
-        89000,
-        100000,
-        103000,
-        113000,
-        113000,
-        123000,
-        123000,
-        123000,
-        133000,
-        143000,
-        153000,
-        163000,
-        173000,
-        183000,
-        183000,
-        183000,
-        183000,
-        190000,
-        192000,
-        194000,
-        196000,
-        198000,
-        200000,
-        202000,
+
+    public int[] botTimeHs = new int[]{
+            60000,
+            60000,
+            70000,
+            73000,
+            76000,
+            79000,
+            89000,
+            100000,
+            103000,
+            113000,
+            113000,
+            123000,
+            123000,
+            123000,
+            133000,
+            143000,
+            153000,
+            163000,
+            173000,
+            183000,
+            183000,
+            183000,
+            183000,
+            190000,
+            192000,
+            194000,
+            196000,
+            198000,
+            200000,
+            202000,
     };
-    
+
     public ZoneMap[] bossZone = new ZoneMap[]{
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null
     };
-    
+
     protected static Boss instance;
-    
+
     public static Boss gI() {
         if (instance == null) {
             instance = new Boss();
-            instance.petInfoHead = new short[] {
-                285,
-                288,
-                282
+            instance.petInfoHead = new short[]{
+                    285,
+                    288,
+                    282
             };
         }
         return instance;
     }
-    
-    
+
+
     public void updateDie(Char player, Char boss, ZoneMap zone) {
         //Nhiem vu hang ngay
         if (player != null && player.session != null && player.myObj().taskEveryday != null && player.myObj().taskEveryday.template.type == 2 && player.myObj().taskEveryday.template.templateId == boss.cTemplateId) {
-        	if (player.myObj().taskEveryday.addCount(1)) {
-        		player.addInfo1(mResources.TAKE_GIFT3);
-        	}
+            if (player.myObj().taskEveryday.addCount(1)) {
+                player.addInfo1(mResources.TAKE_GIFT3);
+            }
         }
         //Nhiem vu thanh tich trum diet boss
+        assert player != null;
         if (player.session != null) {
-        	player.updateArchivement(19, 1L);
+            player.updateArchivement(19, 1L);
         }
         //Broly
         if (boss.cTemplateId == 13) {
-            
-//            if (boss.cHPGoc >= 1000000L) {
-//                Char bot = Player.addBoss(14, 0, boss.cHPGoc, -1, true, boss.cx, boss.cy, null, 10000, boss.indexXH);
-//                bot.maxTimeEff = 5000;
-//                bot.arrInMap = boss.arrInMap;
-//                if (boss.numberXH != -1) {
-//                    bot.numberXH = boss.numberXH;
-//                    bot.cName = String.format(mResources.ADD_FORMAT_D, bot.cName, boss.numberXH);
-//                }
-//                int num0 = 0;
-//                while (num0++ < 100) {
-//                    try {
-//                        ZoneMap zone_127 = boss.zoneMap.map.zones.get(Util.gI().nextInt(20));
-//                        if (zone_127.countBossById(13) > 0) {
-//                            continue;
-//                        }
-//                        zone_127.join(bot, 0, -1, -1);
-//                        break;
-//                    } catch (Exception e) {
-//                    }
-//                }
-//                Server.gI().chatVip(String.format(mResources.BOSS_HAVE, bot.cName, boss.zoneMap.mapTemplate.mapName));
-//            } else if (boss.numberXH != -1) {
-//                Char bot2 = Player.addBoss(13, 0, -1, -1, true, boss.cx, boss.cy, null, 10000, boss.indexXH);
-//                bot2.cName = boss.cName;
-//                bot2.numberXH = boss.numberXH;
-//                bot2.arrInMap = boss.arrInMap;
-//                int num1 = 0;
-//                while(num1++ < 100) {
-//                    try {
-//                        Map map_437 = Map.getMapServer(bot2.arrInMap[Util.gI().nextInt(bot2.arrInMap.length)]);
-//                        ZoneMap zone_128 = map_437.zones.get(Util.gI().nextInt(20));
-//                        if (zone_128.countBossById(13) > 0) {
-//                            continue;
-//                        }
-//                        zone_128.join(bot2, 0, -1, -1);
-//                        break;
-//                    } catch (Exception e) {
-//                    }
-//                }
-//            }
+            if (boss.cHPGoc >= 1000000L) {
+                Char bot = Player.addBoss(14, 0, boss.cHPGoc, -1, true, boss.cx, boss.cy, null, 10000, boss.indexXH);
+                bot.maxTimeEff = 5000;
+                bot.arrInMap = boss.arrInMap;
+                if (boss.numberXH != -1) {
+                    bot.numberXH = boss.numberXH;
+                    bot.cName = String.format(mResources.ADD_FORMAT_D, bot.cName, boss.numberXH);
+                }
+                int num0 = 0;
+                while (num0++ < 100) {
+                    try {
+                        ZoneMap zone_127 = boss.zoneMap.map.zones.get(Util.gI().nextInt(20));
+                        if (zone_127.countBossById(13) > 0) {
+                            continue;
+                        }
+                        zone_127.join(bot, 0, -1, -1);
+                        break;
+                    } catch (Exception e) {
+                    }
+                }
+                Server.gI().chatVip(String.format(mResources.BOSS_HAVE, bot.cName, boss.zoneMap.mapTemplate.mapName));
+            } else if (boss.numberXH != -1) {
+                Char bot2 = Player.addBoss(13, 0, -1, -1, true, boss.cx, boss.cy, null, 10000, boss.indexXH);
+                bot2.cName = boss.cName;
+                bot2.numberXH = boss.numberXH;
+                bot2.arrInMap = boss.arrInMap;
+                int num1 = 0;
+                while (num1++ < 100) {
+                    try {
+                        Map map_437 = Map.getMapServer(bot2.arrInMap[Util.gI().nextInt(bot2.arrInMap.length)]);
+                        if (map_437 == null) continue;
+                        ZoneMap zone_128 = map_437.zones.get(Util.gI().nextInt(20));
+                        if (zone_128.countBossById(13) > 0) {
+                            continue;
+                        }
+                        zone_128.join(bot2, 0, -1, -1);
+                        break;
+                    } catch (Exception e) {
+                    }
+                }
+            }
         }
         if (boss.cTemplateId == 46) {
             Char[] arrChar;
@@ -229,9 +231,9 @@ public class Boss {
                     arrChar[i] = zone.players.get(i);
                 }
             }
-            for (int i = 0; i < arrChar.length; i++) {
-                if (arrChar[i] != null && arrChar[i].ctaskId == 21 && arrChar[i].ctaskIndex == 1) {
-                    arrChar[i].updateTask(1);
+            for (Char aChar : arrChar) {
+                if (aChar != null && aChar.ctaskId == 21 && aChar.ctaskIndex == 1) {
+                    aChar.updateTask(1);
                 }
             }
         }
@@ -256,13 +258,13 @@ public class Boss {
                     arrChar[i] = zone.players.get(i);
                 }
             }
-            for (int i = 0; i < arrChar.length; i++) {
-                if ((int) (100f / (float)boss.cHPFull * (float)boss.getDam(arrChar[i].charID)) >= 20) {
-                    if (arrChar[i].ctaskId == 33 && arrChar[i].ctaskIndex == 1) {
-                        arrChar[i].updateTask(1);
+            for (Char aChar : arrChar) {
+                if ((int) (100f / (float) boss.cHPFull * (float) boss.getDam(aChar.charID)) >= 20) {
+                    if (aChar.ctaskId == 33 && aChar.ctaskIndex == 1) {
+                        aChar.updateTask(1);
                     }
-                    if (arrChar[i].me && !arrChar[i].isTemplate) {
-                        arrChar[i].updateCollectPoint(10);
+                    if (aChar.me && !aChar.isTemplate) {
+                        aChar.updateCollectPoint(10);
                     }
                 }
             }
@@ -275,13 +277,13 @@ public class Boss {
                     arrChar[i] = zone.players.get(i);
                 }
             }
-            for (int i = 0; i < arrChar.length; i++) {
-                if ((int) (100f / (float)boss.cHPFull * (float)boss.getDam(arrChar[i].charID)) >= 20) {
-                    if (arrChar[i].ctaskId == 33 && arrChar[i].ctaskIndex == 2) {
-                        arrChar[i].updateTask(1);
+            for (Char aChar : arrChar) {
+                if ((int) (100f / (float) boss.cHPFull * (float) boss.getDam(aChar.charID)) >= 20) {
+                    if (aChar.ctaskId == 33 && aChar.ctaskIndex == 2) {
+                        aChar.updateTask(1);
                     }
-                    if (arrChar[i].me && !arrChar[i].isTemplate) {
-                        arrChar[i].updateCollectPoint(10);
+                    if (aChar.me && !aChar.isTemplate) {
+                        aChar.updateCollectPoint(10);
                     }
                 }
             }
@@ -294,13 +296,13 @@ public class Boss {
                     arrChar[i] = zone.players.get(i);
                 }
             }
-            for (int i = 0; i < arrChar.length; i++) {
-                if ((int) (100f / (float)boss.cHPFull * (float)boss.getDam(arrChar[i].charID)) >= 20) {
-                    if (arrChar[i].ctaskId == 33 && arrChar[i].ctaskIndex == 3) {
-                        arrChar[i].updateTask(1);
+            for (Char aChar : arrChar) {
+                if ((int) (100f / (float) boss.cHPFull * (float) boss.getDam(aChar.charID)) >= 20) {
+                    if (aChar.ctaskId == 33 && aChar.ctaskIndex == 3) {
+                        aChar.updateTask(1);
                     }
-                    if (arrChar[i].me && !arrChar[i].isTemplate) {
-                        arrChar[i].updateCollectPoint(10);
+                    if (aChar.me && !aChar.isTemplate) {
+                        aChar.updateCollectPoint(10);
                     }
                 }
             }
@@ -313,13 +315,13 @@ public class Boss {
                     arrChar[i] = zone.players.get(i);
                 }
             }
-            for (int i = 0; i < arrChar.length; i++) {
-                if ((int) (100f / (float)boss.cHPFull * (float)boss.getDam(arrChar[i].charID)) >= 20) {
-                    if (arrChar[i].ctaskId == 33 && arrChar[i].ctaskIndex == 4) {
-                        arrChar[i].updateTask(1);
+            for (Char aChar : arrChar) {
+                if ((int) (100f / (float) boss.cHPFull * (float) boss.getDam(aChar.charID)) >= 20) {
+                    if (aChar.ctaskId == 33 && aChar.ctaskIndex == 4) {
+                        aChar.updateTask(1);
                     }
-                    if (arrChar[i].me && !arrChar[i].isTemplate) {
-                        arrChar[i].updateCollectPoint(10);
+                    if (aChar.me && !aChar.isTemplate) {
+                        aChar.updateCollectPoint(10);
                     }
                 }
             }
@@ -332,13 +334,13 @@ public class Boss {
                     arrChar[i] = zone.players.get(i);
                 }
             }
-            for (int i = 0; i < arrChar.length; i++) {
-                if ((int) (100f / (float)boss.cHPFull * (float)boss.getDam(arrChar[i].charID)) >= 20) {
-                    if (arrChar[i].ctaskId == 33 && arrChar[i].ctaskIndex == 5) {
-                        arrChar[i].updateTask(1);
+            for (Char aChar : arrChar) {
+                if ((int) (100f / (float) boss.cHPFull * (float) boss.getDam(aChar.charID)) >= 20) {
+                    if (aChar.ctaskId == 33 && aChar.ctaskIndex == 5) {
+                        aChar.updateTask(1);
                     }
-                    if (arrChar[i].me && !arrChar[i].isTemplate) {
-                        arrChar[i].updateCollectPoint(10);
+                    if (aChar.me && !aChar.isTemplate) {
+                        aChar.updateCollectPoint(10);
                     }
                 }
             }
@@ -352,7 +354,7 @@ public class Boss {
                 }
             }
             for (int i = 0; i < arrChar.length; i++) {
-                if ((int) (100f / (float)boss.cHPFull * (float)boss.getDam(arrChar[i].charID)) >= 20) {
+                if ((int) (100f / (float) boss.cHPFull * (float) boss.getDam(arrChar[i].charID)) >= 20) {
                     if (arrChar[i].ctaskId == 33 && arrChar[i].ctaskIndex == 6) {
                         arrChar[i].updateTask(1);
                     }
@@ -374,7 +376,7 @@ public class Boss {
                 player.updateTask(1);
             }
             //Tieu doi sat thu
-            
+
             if (boss.cTemplateId == 58 && player.ctaskId == 24 && player.ctaskIndex == 0) {
                 player.updateTask(1);
             }
@@ -387,7 +389,7 @@ public class Boss {
             if (boss.cTemplateId == 62 && player.ctaskId == 24 && player.ctaskIndex == 3) {
                 player.updateTask(1);
             }
-            
+
             //Fide dai ca
             if (boss.cTemplateId == 63 && player.ctaskId == 25 && player.ctaskIndex == 0) {
                 player.updateTask(1);
@@ -398,7 +400,7 @@ public class Boss {
             if (boss.cTemplateId == 65 && player.ctaskId == 25 && player.ctaskIndex == 2) {
                 player.updateTask(1);
             }
-            
+
             //Robot sat thu
             if (boss.cTemplateId == 69 && player.ctaskId == 27 && player.ctaskIndex == 1) {
                 player.updateTask(1);
@@ -406,7 +408,7 @@ public class Boss {
             if (boss.cTemplateId == 70 && player.ctaskId == 27 && player.ctaskIndex == 2) {
                 player.updateTask(1);
             }
-            
+
             //Robot sat thu 2
             if (boss.cTemplateId == 68 && player.ctaskId == 28 && player.ctaskIndex == 1) {
                 player.updateTask(1);
@@ -417,7 +419,7 @@ public class Boss {
             if (boss.cTemplateId == 66 && player.ctaskId == 28 && player.ctaskIndex == 3) {
                 player.updateTask(1);
             }
-            
+
             //Robot sat thu 3
             if (boss.cTemplateId == 71 && player.ctaskId == 29 && player.ctaskIndex == 1) {
                 player.updateTask(1);
@@ -428,7 +430,7 @@ public class Boss {
             if (boss.cTemplateId == 73 && player.ctaskId == 29 && player.ctaskIndex == 3) {
                 player.updateTask(1);
             }
-            
+
             //Xen bo hung
             if (boss.cTemplateId == 74 && player.ctaskId == 30 && player.ctaskIndex == 1) {
                 player.updateTask(1);
@@ -439,7 +441,7 @@ public class Boss {
             if (boss.cTemplateId == 76 && player.ctaskId == 30 && player.ctaskIndex == 3) {
                 player.updateTask(1);
             }
-            
+
             //Xen dao choi
             if (boss.cTemplateId == 25 && player.ctaskId == 31 && player.ctaskIndex == 3) {
                 player.updateTask(1);
@@ -449,7 +451,7 @@ public class Boss {
             }
         }
     }
-    
+
     public void updateDie(Char player, Char boss, ArrayList<ItemMap> itemMaps, ZoneMap zone) {
         Boss.gI().updateDie(player, boss, zone);
         int charId = -1;
@@ -457,18 +459,17 @@ public class Boss {
             charId = player.myCharz().charID;
         }
         //Gift
-        switch(boss.cTemplateId) {       
+        switch (boss.cTemplateId) {
             //Cooler
-            case 1:
-            {   
+            case 1: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
                 }
-                 //Ngoc rong 3 sao
+                //Ngoc rong 3 sao
                 if (Util.gI().nextInt(100) <= 5) {
                     for (int i = 0; i < 1; i++) {
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -496,13 +497,13 @@ public class Boss {
                 //trang bi ao than linh va ao
                 if (Util.gI().nextInt(200) <= 1) {
                     for (int i = 0; i < 1; i++) {
-                        short[] arrItem = new short[]{555,557,559,563,565,567};
+                        short[] arrItem = new short[]{555, 557, 559, 563, 565, 567};
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);                       
+                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 10) {
-                            it.options.add(new ItemOption(86,0));
+                            it.options.add(new ItemOption(86, 0));
                         }
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -517,7 +518,7 @@ public class Boss {
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
                         Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 50) {
-                            it.options.add(new ItemOption(86,0));
+                            it.options.add(new ItemOption(86, 0));
                         }
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -545,7 +546,7 @@ public class Boss {
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);                       
+                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 50) {
                             it.options.add(new ItemOption(86, 0));
                         }
@@ -576,16 +577,15 @@ public class Boss {
                 break;
             }
             //Coller 2
-            case 2:
-            {   
+            case 2: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 10, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
                 }
-                 //Ngoc rong 3 sao
+                //Ngoc rong 3 sao
                 if (Util.gI().nextInt(100) <= 5) {
                     for (int i = 0; i < 1; i++) {
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -613,13 +613,13 @@ public class Boss {
                 //trang bi ao than linh va ao
                 if (Util.gI().nextInt(150) <= 1) {
                     for (int i = 0; i < 1; i++) {
-                        short[] arrItem = new short[]{555,557,559,563,565,567};
+                        short[] arrItem = new short[]{555, 557, 559, 563, 565, 567};
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);                       
+                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 10) {
-                            it.options.add(new ItemOption(86,0));
+                            it.options.add(new ItemOption(86, 0));
                         }
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -634,7 +634,7 @@ public class Boss {
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
                         Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 50) {
-                            it.options.add(new ItemOption(86,0));
+                            it.options.add(new ItemOption(86, 0));
                         }
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -649,7 +649,7 @@ public class Boss {
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
                         Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 80) {
-                            it.options.add(new ItemOption(86,0));
+                            it.options.add(new ItemOption(86, 0));
                         }
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -662,7 +662,7 @@ public class Boss {
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);                       
+                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 50) {
                             it.options.add(new ItemOption(86, 0));
                         }
@@ -687,16 +687,15 @@ public class Boss {
                 if (player != null) {
                     Server.gI().chatVip(String.format(mResources.ATT_DIE_BOSS, player.cName, boss.cName));
                 }
-                if (player != null  && player.session != null) {
+                if (player != null && player.session != null) {
                     player.addTaskPointDH(1291, 1);
                 }
                 break;
             }
             //Fide vang
-            case 3:
-            {   
+            case 3: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 1, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
@@ -712,15 +711,14 @@ public class Boss {
                     }
                     itemMaps.add(itemMap);
                 }
-                
+
                 if (player != null) {
                     Server.gI().chatVip(String.format(mResources.ATT_DIE_BOSS, player.cName, boss.cName));
                 }
                 break;
             }
             //Black Goku
-            case 4:
-            {   
+            case 4: {
                 // bi kip tuyet ki
                 for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -834,8 +832,7 @@ public class Boss {
                 break;
             }
             //Super Black Goku
-            case 5:
-            {
+            case 5: {
                 // bi kip tuyet ki
                 for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -925,7 +922,7 @@ public class Boss {
                         itemMaps.add(itemMap);
                     }
                 }
-                
+
                 //Roi moeny
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -956,8 +953,7 @@ public class Boss {
                 break;
             }
             //Dr Lychee
-            case 11:
-            {
+            case 11: {
                 int ss = 0;
                 if (zone.map.destronGas != null) {
                     if (zone.map.destronGas.level > 100) {
@@ -986,8 +982,7 @@ public class Boss {
                 break;
             }
             //
-            case 12:
-            {
+            case 12: {
                 int ss = 0;
                 if (zone.map.destronGas != null) {
                     if (zone.map.destronGas.level > 100) {
@@ -1018,22 +1013,21 @@ public class Boss {
                 break;
             }
             //Super Broly
-            case 14:
-            {
+            case 14: {
                 if (player != null) {
                     if (player.myCharz().myPet == null) {
-//                        Player.petInfo(player, Util.gI().nextInt(3));
-//                        zone.join(player.myPetz(), 0, Util.gI().nextInt(player.cx - 24, player.cx + 24), player.cy);
-//                        player.myCharz().session.service.chat(player.myPetz().charID, mResources.XIN_HAY_NHAN);
+                        Player.petInfo(player, Util.gI().nextInt(3));
+                        zone.join(player.myPetz(), 0, Util.gI().nextInt(player.cx - 24, player.cx + 24), player.cy);
+                        player.myCharz().session.service.chat(player.myPetz().charID, mResources.XIN_HAY_NHAN);
                     } else {
-//                        Char o = zone.getPlayerNotPetz();
-//                        if (o != null) {
+                        Char o = zone.getPlayerNotPetz();
+                        if (o != null) {
 //                            Player.petInfo(o, util.nextInt(3));
 //                            o.myPetz().cx = util.nextInt(o.cx - 24, o.cx + 24);
 //                            o.myPetz().cy = o.cy;
-//                            zone.join(o.myPetz(), 0);
+//                            zone.join(o.myPetz(),1, 0);
 //                            Service.chat(o.myCharz().session, o.myPetz().charID, mResources.XIN_HAY_NHAN);
-//                        }
+                        }
                     }
                     //Trung mabu
 
@@ -1045,15 +1039,14 @@ public class Boss {
                 break;
             }
             //Xen hoan thien
-            case 23:
-            {   
+            case 23: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //Ngoc rong 3 sao
                 if (Util.gI().nextInt(100) <= 10) {
                     for (int i = 0; i < 1; i++) {
@@ -1108,15 +1101,14 @@ public class Boss {
                 break;
             }
             //Sieu bo hung
-            case 24:
-            {   
+            case 24: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //Ngoc rong 2 sao
                 if (Util.gI().nextInt(100) <= 5) {
                     for (int i = 0; i < 1; i++) {
@@ -1151,11 +1143,11 @@ public class Boss {
                 //trang bi ao than linh
                 if (Util.gI().nextInt(100) <= 1) {
                     for (int i = 0; i < 1; i++) {
-                        short[] arrItem = new short[]{555,557,559,563,565,567};
+                        short[] arrItem = new short[]{555, 557, 559, 563, 565, 567};
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);                       
+                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 50) {
                             it.options.add(new ItemOption(86, 0));
                         }
@@ -1198,11 +1190,11 @@ public class Boss {
                                     option.optionTemplate.id == 22 || option.optionTemplate.id == 23 ||
                                     option.optionTemplate.id == 27 || option.optionTemplate.id == 28 ||
                                     option.optionTemplate.id == 47) {
-                                option.param += option.param * percent / 100L;
+                                option.param += (int) (option.param * percent / 100L);
                             }
                         }
                         it.options.add(new ItemOption(207, percent));
-                        
+
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
                     }
@@ -1214,7 +1206,7 @@ public class Boss {
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);                       
+                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 50) {
                             it.options.add(new ItemOption(86, 0));
                         }
@@ -1236,7 +1228,7 @@ public class Boss {
                     ItemMap itemMap = zone.addItemMap(-1, new Item(190, false, 30000, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
                 }
-                
+
                 if (player != null) {
                     Server.gI().chatVip(String.format(mResources.ATT_DIE_BOSS, player.cName, boss.cName));
                 }
@@ -1246,8 +1238,7 @@ public class Boss {
                 break;
             }
             //Xen con
-            case 25:
-            {   
+            case 25: {
                 //Roi gold
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1271,8 +1262,7 @@ public class Boss {
                 break;
             }
             //Tap su
-            case 27:
-            {
+            case 27: {
                 boss.liveFromDead(2);
                 boss.timeChangePk5 = 1;
                 //Bi kiep
@@ -1287,8 +1277,7 @@ public class Boss {
                 break;
             }
             //Tan binh
-            case 28:
-            {
+            case 28: {
                 boss.liveFromDead(2);
                 boss.timeChangePk5 = 1;
                 //Bi kiep
@@ -1303,8 +1292,7 @@ public class Boss {
                 break;
             }
             //Chien binh
-            case 29:
-            {
+            case 29: {
                 boss.liveFromDead(2);
                 boss.timeChangePk5 = 1;
                 //Bi kiep
@@ -1319,8 +1307,7 @@ public class Boss {
                 break;
             }
             //Doi truong
-            case 30:
-            {
+            case 30: {
                 boss.liveFromDead(2);
                 boss.timeChangePk5 = 1;
                 //Bi kiep
@@ -1335,16 +1322,15 @@ public class Boss {
                 break;
             }
             //Ninja Ao Tim
-            case 42:
-            {
+            case 42: {
                 if (boss.isBossMain) {
                     //Roi moeny
-                        for (int i = 0; i < 5; i++) {
-                            int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
-                            int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                            ItemMap itemMap = zone.addItemMap(-1, new Item(861, false, 1, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
-                            itemMaps.add(itemMap);
-                        }
+                    for (int i = 0; i < 5; i++) {
+                        int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
+                        int toY = zone.mapTemplate.touchY(toX, boss.cy);
+                        ItemMap itemMap = zone.addItemMap(-1, new Item(861, false, 1, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
+                        itemMaps.add(itemMap);
+                    }
                     //Roi gold
                     for (int i = 0; i < 10; i++) {
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1396,8 +1382,7 @@ public class Boss {
                 break;
             }
             //Robot ve si
-            case 43:
-            {
+            case 43: {
                 //Roi moeny
                 if (Util.gI().nextInt(100) <= 20) {
                     for (int i = 0; i < 5; i++) {
@@ -1444,19 +1429,18 @@ public class Boss {
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
                     }
-                }   
+                }
                 break;
             }
             //Trung Uy Thep
-            case 44:
-            {
+            case 44: {
                 //Roi moeny
-                    for (int i = 0; i < 5; i++) {
-                        int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
-                        int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        ItemMap itemMap = zone.addItemMap(-1, new Item(861, false, 1, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
-                        itemMaps.add(itemMap);
-                    }
+                for (int i = 0; i < 5; i++) {
+                    int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
+                    int toY = zone.mapTemplate.touchY(toX, boss.cy);
+                    ItemMap itemMap = zone.addItemMap(-1, new Item(861, false, 1, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
+                    itemMaps.add(itemMap);
+                }
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1498,15 +1482,14 @@ public class Boss {
                 break;
             }
             //Trung Uy Xanh Lo
-            case 45:
-            {
+            case 45: {
                 //Roi moeny
-                    for (int i = 0; i < 1; i++) {
-                        int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
-                        int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        ItemMap itemMap = zone.addItemMap(-1, new Item(861, false, 5, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
-                        itemMaps.add(itemMap);
-                    }
+                for (int i = 0; i < 1; i++) {
+                    int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
+                    int toY = zone.mapTemplate.touchY(toX, boss.cy);
+                    ItemMap itemMap = zone.addItemMap(-1, new Item(861, false, 5, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
+                    itemMaps.add(itemMap);
+                }
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1562,19 +1545,18 @@ public class Boss {
                         ItemMap itemMap = zone.addItemMap(-1, new Item(842, false, 1, ItemOption.getOption(842, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                         itemMaps.add(itemMap);
                     }
-                }      
+                }
                 break;
             }
             //Trung Uy Trang
-            case 46:
-            {
+            case 46: {
                 //Roi moeny
-                    for (int i = 0; i < 5; i++) {
-                        int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
-                        int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        ItemMap itemMap = zone.addItemMap(-1, new Item(861, false, 1, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
-                        itemMaps.add(itemMap);
-                    }
+                for (int i = 0; i < 5; i++) {
+                    int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
+                    int toY = zone.mapTemplate.touchY(toX, boss.cy);
+                    ItemMap itemMap = zone.addItemMap(-1, new Item(861, false, 1, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
+                    itemMaps.add(itemMap);
+                }
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1621,12 +1603,11 @@ public class Boss {
                         ItemMap itemMap = zone.addItemMap(-1, new Item(840, false, 1, ItemOption.getOption(840, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                         itemMaps.add(itemMap);
                     }
-                }        
+                }
                 break;
             }
             //Bujin Tieu Doi Bojack
-            case 47:
-            {                 
+            case 47: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1647,8 +1628,7 @@ public class Boss {
                 break;
             }
             //Kogu Tieu Doi Bojack
-            case 48:
-            {           
+            case 48: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1669,8 +1649,7 @@ public class Boss {
                 break;
             }
             //Zangya Tieu Doi Bojack
-            case 49:
-            {             
+            case 49: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1691,8 +1670,7 @@ public class Boss {
                 break;
             }
             //Bido Tieu Doi Bojack
-            case 50:
-            {     
+            case 50: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1713,8 +1691,7 @@ public class Boss {
                 break;
             }
             //Bojack Tieu Doi Bojack
-            case 51:
-            {      
+            case 51: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1742,15 +1719,14 @@ public class Boss {
                 break;
             }
             //Super Bojack Tieu Doi Bojack
-            case 52:
-            {   
+            case 52: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 1, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -1778,14 +1754,13 @@ public class Boss {
                 break;
             }
             //Poc
-            case 71:
-            {   // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+            case 71: {   // bi kip tuyet ki
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //Trang bi co sao
                 if (Util.gI().nextInt(100) <= 5) {
                     for (int i = 0; i < 1; i++) {
@@ -1824,15 +1799,14 @@ public class Boss {
                 break;
             }
             //Pic
-            case 72:
-            {   
+            case 72: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //Trang bi co sao
                 if (Util.gI().nextInt(100) <= 5) {
                     for (int i = 0; i < 1; i++) {
@@ -1871,15 +1845,14 @@ public class Boss {
                 break;
             }
             //KigKong
-            case 73:
-            {  
-                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+            case 73: {
+                // bi kip tuyet ki
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //Trang bi co sao
                 if (Util.gI().nextInt(100) <= 5) {
                     for (int i = 0; i < 1; i++) {
@@ -1918,15 +1891,14 @@ public class Boss {
                 break;
             }
             //Xen bo hung
-            case 74:
-            {   
+            case 74: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 1, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //Trang bi co sao
                 if (Util.gI().nextInt(100) <= 10) {
                     for (int i = 0; i < 1; i++) {
@@ -1968,15 +1940,14 @@ public class Boss {
                 break;
             }
             //Xen bo hung
-            case 75:
-            {   
+            case 75: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //Trang bi co sao
                 if (Util.gI().nextInt(100) <= 5) {
                     for (int i = 0; i < 1; i++) {
@@ -2018,15 +1989,14 @@ public class Boss {
                 break;
             }
             //Xen hoan thien
-            case 76:
-            {   
+            case 76: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //Trang bi co sao
                 if (Util.gI().nextInt(100) <= 6) {
                     for (int i = 0; i < 1; i++) {
@@ -2065,8 +2035,7 @@ public class Boss {
                 break;
             }
             //Drabula 12h
-            case 77:
-            {   
+            case 77: {
                 //Bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 100, boss.cx + 100);
@@ -2091,9 +2060,8 @@ public class Boss {
                 break;
             }
             //Bui Bui 12h
-            case 78:
-            {   
-                 //Bi kip tuyet ki
+            case 78: {
+                //Bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 100, boss.cx + 100);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
@@ -2117,8 +2085,7 @@ public class Boss {
                 break;
             }
             //Yancon 12h
-            case 79:
-            {   
+            case 79: {
                 //Bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 100, boss.cx + 100);
@@ -2143,8 +2110,7 @@ public class Boss {
                 break;
             }
             //Mabu 12h
-            case 80:
-            {     
+            case 80: {
                 //Bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 100, boss.cx + 100);
@@ -2165,7 +2131,7 @@ public class Boss {
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(-1, new Item(190, false, 30000, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                } 
+                }
                 //Trang bi co sao
                 if (Util.gI().nextInt(100) <= 100) {
                     for (int i = 0; i < 1; i++) {
@@ -2182,7 +2148,7 @@ public class Boss {
                         itemMaps.add(itemMap);
                     }
                 }
-                
+
                 //Cho ve nha
                 if (zone.isEggHatch) {
                     zone.setTimeHatch(60);
@@ -2193,8 +2159,7 @@ public class Boss {
                 break;
             }
             //Drabula 2 12h
-            case 81:
-            {    
+            case 81: {
                 //Bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 100, boss.cx + 100);
@@ -2219,8 +2184,7 @@ public class Boss {
                 break;
             }
             //Drabula 3 12h
-            case 82:
-            {   
+            case 82: {
                 //Bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 100, boss.cx + 100);
@@ -2245,8 +2209,7 @@ public class Boss {
                 break;
             }
             //Bui Bui 2 12h
-            case 83:
-            {   
+            case 83: {
                 //Bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 100, boss.cx + 100);
@@ -2271,8 +2234,7 @@ public class Boss {
                 break;
             }
             //Mabu map
-            case 86:
-            {    
+            case 86: {
                 //Bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 100, boss.cx + 100);
@@ -2297,15 +2259,14 @@ public class Boss {
                 break;
             }
             //Super bu
-            case 87:
-            {   
+            case 87: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //trang bi than linh (quan tl)
                 if (Util.gI().nextInt(500) <= 1) {
                     for (int i = 0; i < 1; i++) {
@@ -2324,15 +2285,14 @@ public class Boss {
                 break;
             }
             //Bu Tenk
-            case 88:
-            {   
+            case 88: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //trang bi than linh (quan tl)
                 if (Util.gI().nextInt(300) <= 1) {
                     for (int i = 0; i < 1; i++) {
@@ -2351,10 +2311,9 @@ public class Boss {
                 break;
             }
             //Bu Han
-            case 89:
-            {   
+            case 89: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
@@ -2375,19 +2334,18 @@ public class Boss {
                         itemMaps.add(itemMap);
                     }
                 }
-                
+
                 break;
             }
             //Kid Bu
-            case 90:
-            {   
+            case 90: {
                 // bi kip tuyet ki
-                 for (int i = 0; i < 1; i++) {
+                for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(charId, new Item(1229, false, 5, ItemOption.getOption(1229, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 //trang bi than linh (quan tl)
                 if (Util.gI().nextInt(100) <= 1) {
                     for (int i = 0; i < 1; i++) {
@@ -2407,8 +2365,7 @@ public class Boss {
                 break;
             }
             //Super Bu 2h
-            case 91:
-            {              
+            case 91: {
                 boss.timeClear = 1;
                 break;
             }
@@ -2528,15 +2485,14 @@ public class Boss {
                         itemMaps.add(itemMap);
                     }
                 }
-                
+
                 Rank.RANKS.get(5).addTop(zone.map.khobau.clan.name, zone.map.khobau.clan.getMemberByName(zone.map.khobau.clan.leaderName).head, zone.map.khobau.clan.getMemberByName(zone.map.khobau.clan.leaderName).headICON, zone.map.khobau.clan.getMemberByName(zone.map.khobau.clan.leaderName).body, zone.map.khobau.clan.getMemberByName(zone.map.khobau.clan.leaderName).leg, zone.map.khobau.clan.getMemberByName(zone.map.khobau.clan.leaderName).ID, zone.map.khobau.level, (int) (System.currentTimeMillis() - zone.map.khobau.lastOpen));
                 boss.timeClear = 1;
                 zone.map.khobau.miliTime = 60000;
                 break;
             }
             //Tho dai ca
-            case 96:
-            {
+            case 96: {
                 int num_535 = Util.gI().nextInt(1, 8);
                 //Cu ca rot
                 for (int i = 0; i < num_535; i++) {
@@ -2548,10 +2504,9 @@ public class Boss {
                     itemMaps.add(itemMap_359);
                 }
                 break;
-            }            
+            }
             //Khi dot
-            case 97:
-            {
+            case 97: {
                 int num_536 = Util.gI().nextInt(1, 8);
                 //Duoi khi
                 for (int i = 0; i < num_536; i++) {
@@ -2562,11 +2517,10 @@ public class Boss {
                     ItemMap itemMap_360 = zone.addItemMap(-1, it_936, toX, toY, 0, -1);
                     itemMaps.add(itemMap_360);
                 }
-                break;                
+                break;
             }
             //So 4 Tieu Doi Sat Thu
-            case 110:
-            {       
+            case 110: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -2588,7 +2542,7 @@ public class Boss {
                     ItemMap itemMap = zone.addItemMap(charId, new Item(429, false, 1, ItemOption.getOption(429, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
                 }
-                 //Ngoc rong 6 sao
+                //Ngoc rong 6 sao
                 if (Util.gI().nextInt(100) <= 100) {
                     for (int i = 0; i < 1; i++) {
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -2602,9 +2556,8 @@ public class Boss {
                 }
                 break;
             }
-             //So 3 Tieu Doi Sat Thu
-            case 111:
-            {     
+            //So 3 Tieu Doi Sat Thu
+            case 111: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -2640,9 +2593,8 @@ public class Boss {
                 }
                 break;
             }
-             //So 2 Tieu Doi Sat Thu
-            case 112:
-            {     
+            //So 2 Tieu Doi Sat Thu
+            case 112: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -2679,8 +2631,7 @@ public class Boss {
                 break;
             }
             //So 1 Tieu Doi Sat Thu
-            case 113:
-            {       
+            case 113: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -2717,8 +2668,7 @@ public class Boss {
                 break;
             }
             //TDT
-            case 114:
-            {    
+            case 114: {
                 //Roi gold
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -2755,8 +2705,7 @@ public class Boss {
                 break;
             }
             // bi ma
-            case 117:
-            {
+            case 117: {
                 //ngoc rong
                 if (Util.gI().nextInt(100) <= 50) {
                     for (int i = 0; i < 1; i++) {
@@ -2787,13 +2736,13 @@ public class Boss {
                 }
                 //nlsk
                 for (int i = 0; i < 5; i++) {
-                    short[] arrItem = new short[]{199,200,201};
-                        int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
-                        int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
-                        int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 10, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
-                        ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
-                        itemMaps.add(itemMap);
+                    short[] arrItem = new short[]{199, 200, 201};
+                    int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
+                    int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
+                    int toY = zone.mapTemplate.touchY(toX, boss.cy);
+                    Item it = new Item(templateId, false, 10, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
+                    ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
+                    itemMaps.add(itemMap);
                 }
                 //Roi moeny
                 for (int i = 0; i < 5; i++) {
@@ -2801,12 +2750,11 @@ public class Boss {
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(-1, new Item(861, false, 1, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }                             
+                }
                 break;
             }
             //Nhan ban
-            case 129:
-            {
+            case 129: {
                 //Win clone
                 boss.isClear = true;
                 if (player != null) {
@@ -2822,12 +2770,11 @@ public class Boss {
                 if (player != null) {
                     Server.gI().chatVip(String.format(mResources.ATT_DIE_BOSS, player.cName, boss.cName));
                 }
-                break;     
+                break;
             }
-            case 133:
-            {
+            case 133: {
                 boss.timeClear = 1;
-                
+
                 //hoa
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -2844,8 +2791,7 @@ public class Boss {
                 }
                 break;
             }
-            case 136:
-            {
+            case 136: {
                 boss.timeClear = 1;
                 //cai trang thuy tinh
                 if (Util.gI().nextInt(100) <= 30) {
@@ -2874,7 +2820,7 @@ public class Boss {
                         itemMaps.add(itemMap);
                     }
                 }
-                
+
                 //hong ngoc
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -2883,10 +2829,9 @@ public class Boss {
                     itemMaps.add(itemMap);
                 }
                 break;
-                
+
             }
-            case 137:
-            {
+            case 137: {
                 boss.timeClear = 1;
                 //cai trang son tinh
                 if (Util.gI().nextInt(100) <= 30) {
@@ -2915,7 +2860,7 @@ public class Boss {
                         itemMaps.add(itemMap);
                     }
                 }
-                
+
                 //hong ngoc
                 for (int i = 0; i < 10; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
@@ -2926,22 +2871,19 @@ public class Boss {
                 break;
             }
             //An trom
-            case 138:
-            {
+            case 138: {
                 if (player != null && player.session != null) {
                     player.addTaskPointDH(1296, 1);
                 }
                 break;
             }
-            case 147:
-            {
-                String text[] = mResources.CHAT_WHISDIE.split("`");
+            case 147: {
+                String[] text = mResources.CHAT_WHISDIE.split("`");
                 boss.addChat(1, text[Util.gI().nextInt(text.length)]);
                 boss.timeClear = 2000;
                 break;
             }
-            case 148:
-            {
+            case 148: {
                 boss.addChat(1, mResources.HE_HE_HE);
                 Char fboss = boss.zoneMap.findBossInMapById(149);
                 if (fboss != null) {
@@ -2950,8 +2892,7 @@ public class Boss {
                 boss.timeClear = 3000;
                 break;
             }
-            case 149:
-            {
+            case 149: {
                 boss.addChat(1, mResources.HE_HE_HE);
                 Char fboss = boss.zoneMap.findBossInMapById(150);
                 if (fboss != null) {
@@ -2960,8 +2901,7 @@ public class Boss {
                 boss.timeClear = 3000;
                 break;
             }
-            case 150:
-            {
+            case 150: {
                 boss.addChat(1, mResources.HE_HE_HE);
                 Char fboss = boss.zoneMap.findBossInMapById(151);
                 if (fboss != null) {
@@ -2970,8 +2910,7 @@ public class Boss {
                 boss.timeClear = 3000;
                 break;
             }
-            case 151:
-            {
+            case 151: {
                 boss.addChat(1, mResources.HE_HE_HE);
                 Char fboss = boss.zoneMap.findBossInMapById(152);
                 if (fboss != null) {
@@ -2980,8 +2919,7 @@ public class Boss {
                 boss.timeClear = 3000;
                 break;
             }
-            case 152:
-            {
+            case 152: {
                 boss.addChat(1, mResources.HE_HE_HE);
                 Char fboss = boss.zoneMap.findBossInMapById(153);
                 if (fboss != null) {
@@ -2990,8 +2928,7 @@ public class Boss {
                 boss.timeClear = 3000;
                 break;
             }
-            case 153:
-            {
+            case 153: {
                 boss.addChat(1, mResources.HE_HE_HE);
                 Char fboss = boss.zoneMap.findBossInMapById(154);
                 if (fboss != null) {
@@ -3249,8 +3186,7 @@ public class Boss {
                 }
                 break;
             }
-            case 158:
-            {
+            case 158: {
                 boss.isBaoVe = true;
                 boss.liveFromDead(2);
                 boss.gong(1000);
@@ -3276,22 +3212,22 @@ public class Boss {
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                     it.options.add(new ItemOption(213, Util.gI().nextInt(10, 50)));
-                     //Add % param
-                        if (Util.gI().nextInt(100) < 20) {
-                            it.options.add(new ItemOption(107, Util.gI().nextInt(1, 3)));
+                    //Add % param
+                    if (Util.gI().nextInt(100) < 20) {
+                        it.options.add(new ItemOption(107, Util.gI().nextInt(1, 3)));
+                    }
+                    int percent = Util.gI().nextInt(1, 15);
+                    for (int j = 0; j < it.options.size(); j++) {
+                        ItemOption option = it.options.get(j);
+                        if (option.optionTemplate.id == 0 || option.optionTemplate.id == 6 ||
+                                option.optionTemplate.id == 7 || option.optionTemplate.id == 14 ||
+                                option.optionTemplate.id == 22 || option.optionTemplate.id == 23 ||
+                                option.optionTemplate.id == 27 || option.optionTemplate.id == 28 ||
+                                option.optionTemplate.id == 47) {
+                            option.param += (int) (option.param * percent / 100L);
                         }
-                        int percent = Util.gI().nextInt(1, 15);
-                        for (int j = 0; j < it.options.size(); j++) {
-                            ItemOption option = it.options.get(j);
-                            if (option.optionTemplate.id == 0 || option.optionTemplate.id == 6 ||
-                                    option.optionTemplate.id == 7 || option.optionTemplate.id == 14 ||
-                                    option.optionTemplate.id == 22 || option.optionTemplate.id == 23 ||
-                                    option.optionTemplate.id == 27 || option.optionTemplate.id == 28 ||
-                                    option.optionTemplate.id == 47) {
-                                option.param += option.param * percent / 100L;
-                            }
-                        }
-                        it.options.add(new ItemOption(207, percent));
+                    }
+                    it.options.add(new ItemOption(207, percent));
                     ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                     itemMaps.add(itemMap);
                 }
@@ -3303,8 +3239,7 @@ public class Boss {
                 }
                 break;
             }
-            case 159:
-            {
+            case 159: {
                 //Wua tai day
                 //hong ngoc
                 for (int i = 0; i < 10; i++) {
@@ -3333,14 +3268,14 @@ public class Boss {
                                 || option.optionTemplate.id == 22 || option.optionTemplate.id == 23
                                 || option.optionTemplate.id == 27 || option.optionTemplate.id == 28
                                 || option.optionTemplate.id == 47) {
-                            option.param += option.param * percent / 100L;
+                            option.param += ((int) option.param * percent / 100L);
                         }
                     }
                     it.options.add(new ItemOption(207, percent));
                     ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                     itemMaps.add(itemMap);
                 }
-               if (player != null) {
+                if (player != null) {
                     Server.gI().chatVip(String.format(mResources.ATT_DIE_BOSS, player.cName, boss.cName));
                 }
                 if (player != null && player.session != null) {
@@ -3349,8 +3284,7 @@ public class Boss {
                 break;
             }
             //Bo canh cung
-            case 160:
-            {
+            case 160: {
                 //Bo canh cung
                 for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 24, boss.cx + 24);
@@ -3363,8 +3297,7 @@ public class Boss {
                 break;
             }
             //Ngai dem
-            case 161:
-            {
+            case 161: {
                 //Ngai dem
                 for (int i = 0; i < 1; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 24, boss.cx + 24);
@@ -3377,14 +3310,12 @@ public class Boss {
                 break;
             }
             //Mabu com
-            case 162:
-            {
+            case 162: {
                 boss.timeClear = 0;
-            	break;
+                break;
             }
             //Fide dai ca
-            case 163:
-            {
+            case 163: {
                 boss.timeClear = 0;
                 int[][] array = boss.sortCharIdDam();
                 for (int i = 0; i < array.length; i++) {
@@ -3461,7 +3392,7 @@ public class Boss {
                     Item it = new Item(861, false, 5, ItemOption.getOption(861, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                     ItemMap itemMap = zone.addItemMap(-1, it, toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }    
+                }
                 // soi sao pha le
                 for (int i = 0; i < 5; i++) {
                     short[] arrItem = new short[]{441, 442, 443, 444, 445};
@@ -3493,8 +3424,7 @@ public class Boss {
                 break;
             }
             //Sieu bo hung
-            case 164:
-            {
+            case 164: {
                 boss.timeClear = 0;
                 int[][] array = boss.sortCharIdDam();
                 for (int i = 0; i < array.length; i++) {
@@ -3588,8 +3518,7 @@ public class Boss {
                 break;
             }
             //Mabu
-            case 165:
-            {
+            case 165: {
                 boss.timeClear = 0;
                 int[][] array = boss.sortCharIdDam();
                 for (int i = 0; i < array.length; i++) {
@@ -3605,7 +3534,7 @@ public class Boss {
                     zone.map.phoban.miliTime = 30000;
                 }
                 //Qua boss tai day
-                 if (Util.gI().nextInt(100) < 50) {
+                if (Util.gI().nextInt(100) < 50) {
                     for (int i = 0; i < 2; i++) {
                         short[] arrItem = new short[]{241, 253, 265, 277, 233, 245, 257, 269, 237, 249, 261, 273, 281};
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
@@ -3628,7 +3557,7 @@ public class Boss {
                         it.options.add(new ItemOption(77, Util.gI().nextInt(25, 35)));
                         it.options.add(new ItemOption(103, Util.gI().nextInt(25, 35)));
                         it.options.add(new ItemOption(5, Util.gI().nextInt(10, 15)));
-                        it.options.add(new ItemOption(126, 15));      
+                        it.options.add(new ItemOption(126, 15));
                         it.options.add(new ItemOption(93, Util.gI().nextInt(1, 3)));
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -3677,16 +3606,16 @@ public class Boss {
                         itemMaps.add(itemMap);
                     }
                 }
-                 //trang bi ao than linh va ao
+                //trang bi ao than linh va ao
                 if (Util.gI().nextInt(150) <= 1) {
                     for (int i = 0; i < 1; i++) {
-                        short[] arrItem = new short[]{555,557,559,563,565,567};
+                        short[] arrItem = new short[]{555, 557, 559, 563, 565, 567};
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);                       
+                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 10) {
-                            it.options.add(new ItemOption(86,0));
+                            it.options.add(new ItemOption(86, 0));
                         }
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -3695,8 +3624,7 @@ public class Boss {
                 break;
             }
             //Zamasu
-            case 166:
-            {
+            case 166: {
                 boss.timeClear = 0;
                 int[][] array = boss.sortCharIdDam();
                 for (int i = 0; i < array.length; i++) {
@@ -3721,7 +3649,7 @@ public class Boss {
                         it.options.add(new ItemOption(77, Util.gI().nextInt(30, 42)));
                         it.options.add(new ItemOption(103, Util.gI().nextInt(30, 42)));
                         it.options.add(new ItemOption(5, Util.gI().nextInt(15, 25)));
-                        it.options.add(new ItemOption(94, 20));      
+                        it.options.add(new ItemOption(94, 20));
                         it.options.add(new ItemOption(93, Util.gI().nextInt(1, 3)));
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -3737,7 +3665,7 @@ public class Boss {
                         itemMaps.add(itemMap);
                     }
                 } else {
-                   for (int i = 0; i < 3; i++) {
+                    for (int i = 0; i < 3; i++) {
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
                         Item it = new Item(898, false, 1, null, mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
@@ -3745,7 +3673,7 @@ public class Boss {
                         it.options.add(new ItemOption(77, Util.gI().nextInt(30, 40)));
                         it.options.add(new ItemOption(103, Util.gI().nextInt(30, 40)));
                         it.options.add(new ItemOption(5, Util.gI().nextInt(15, 20)));
-                        it.options.add(new ItemOption(94, 15));      
+                        it.options.add(new ItemOption(94, 15));
                         it.options.add(new ItemOption(93, Util.gI().nextInt(1, 3)));
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -3794,13 +3722,13 @@ public class Boss {
                 //trang bi ao than linh va ao
                 if (Util.gI().nextInt(150) <= 1) {
                     for (int i = 0; i < 1; i++) {
-                        short[] arrItem = new short[]{555,557,559,563,565,567};
+                        short[] arrItem = new short[]{555, 557, 559, 563, 565, 567};
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);                       
+                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 10) {
-                            it.options.add(new ItemOption(86,0));
+                            it.options.add(new ItemOption(86, 0));
                         }
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -3815,7 +3743,7 @@ public class Boss {
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
                         Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 50) {
-                            it.options.add(new ItemOption(86,0));
+                            it.options.add(new ItemOption(86, 0));
                         }
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
@@ -3843,7 +3771,7 @@ public class Boss {
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
                         int toX = Util.gI().nextInt(boss.cx - 50, boss.cx + 50);
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
-                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);                       
+                        Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 50) {
                             it.options.add(new ItemOption(86, 0));
                         }
@@ -3854,8 +3782,7 @@ public class Boss {
                 break;
             }
             //Berus
-            case 167:
-            {   
+            case 167: {
                 // bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 100, boss.cx + 100);
@@ -3886,7 +3813,7 @@ public class Boss {
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
                     }
-                }             
+                }
                 //Da linh luc
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 110, boss.cx + 110);
@@ -3914,8 +3841,7 @@ public class Boss {
                 break;
             }
             //Whis
-            case 168:
-            {   
+            case 168: {
                 // bi kip tuyet ki
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 150, boss.cx + 150);
@@ -3946,7 +3872,7 @@ public class Boss {
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
                     }
-                }           
+                }
                 //Da linh luc
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 150, boss.cx + 150);
@@ -3981,7 +3907,7 @@ public class Boss {
                     }
                 }
                 //trang bi ao than linh va ao
-                 if (Util.gI().nextInt(150) <= 1) {
+                if (Util.gI().nextInt(150) <= 1) {
                     for (int i = 0; i < 1; i++) {
                         short[] arrItem = new short[]{555, 557, 559, 563, 565, 567};
                         int templateId = arrItem[Util.gI().nextInt(arrItem.length)];
@@ -4000,16 +3926,16 @@ public class Boss {
                                     option.optionTemplate.id == 22 || option.optionTemplate.id == 23 ||
                                     option.optionTemplate.id == 27 || option.optionTemplate.id == 28 ||
                                     option.optionTemplate.id == 47) {
-                                option.param += option.param * percent / 100L;
+                                option.param += (int) (option.param * percent / 100L);
                             }
                         }
                         it.options.add(new ItemOption(207, percent));
-                        
+
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
                     }
                 }
- 
+
                 //trang bi gang than linh
                 if (Util.gI().nextInt(200) <= 1) {
                     for (int i = 0; i < 1; i++) {
@@ -4019,7 +3945,7 @@ public class Boss {
                         int toY = zone.mapTemplate.touchY(toX, boss.cy);
                         Item it = new Item(templateId, false, 1, ItemOption.getOption(templateId, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY);
                         if (Util.gI().nextInt(100) < 50) {
-                            it.options.add(new ItemOption(86,0));
+                            it.options.add(new ItemOption(86, 0));
                         }
                         int percent = Util.gI().nextInt(1, 15);
                         for (int j = 0; j < it.options.size(); j++) {
@@ -4029,7 +3955,7 @@ public class Boss {
                                     option.optionTemplate.id == 22 || option.optionTemplate.id == 23 ||
                                     option.optionTemplate.id == 27 || option.optionTemplate.id == 28 ||
                                     option.optionTemplate.id == 47) {
-                                option.param += option.param * percent / 100L;
+                                option.param += ((int) option.param * percent / 100L);
                             }
                         }
                         it.options.add(new ItemOption(207, percent));
@@ -4190,20 +4116,20 @@ public class Boss {
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
                     }
-                }        
+                }
                 //sach cu
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 75, boss.cx + 75);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(-1, new Item(1281, false, 50, ItemOption.getOption(1281, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }          
+                }
                 if (player != null) {
                     Server.gI().chatVip(String.format(mResources.ATT_DIE_BOSS, player.cName, boss.cName));
                 }
                 break;
             }
-            
+
             //Chilld
             case 170: {
                 // bi kip tuyet ki
@@ -4352,40 +4278,26 @@ public class Boss {
                         ItemMap itemMap = zone.addItemMap(charId, it, toX, toY, 0, -1);
                         itemMaps.add(itemMap);
                     }
-                }        
+                }
                 //sach cu
                 for (int i = 0; i < 5; i++) {
                     int toX = Util.gI().nextInt(boss.cx - 75, boss.cx + 75);
                     int toY = zone.mapTemplate.touchY(toX, boss.cy);
                     ItemMap itemMap = zone.addItemMap(-1, new Item(1281, false, 50, ItemOption.getOption(1281, 0, -1), mResources.EMPTY, mResources.EMPTY, mResources.EMPTY), toX, toY, 0, -1);
                     itemMaps.add(itemMap);
-                }          
+                }
                 if (player != null) {
                     Server.gI().chatVip(String.format(mResources.ATT_DIE_BOSS, player.cName, boss.cName));
                 }
                 break;
             }
-    }
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        //roi vang 
+        }
+        //roi vang
         if (boss.cTemplateType == 45) {
             long tongVang = boss.xuSteal;
             boss.xuSteal = 0;
             int num = 0;
-            while(tongVang > 0) {
+            while (tongVang > 0) {
                 int vang;
                 if (tongVang >= 30000) {
                     vang = 30000;
@@ -4405,8 +4317,8 @@ public class Boss {
         if (boss.cTemplateType == 7) {
             //Roi all do trong pet
             Player o2 = (Player) boss;
-            while(o2.itemBuys.size() > 0) {
-                Item it94 = o2.itemBuys.remove(0);
+            while (!o2.itemBuys.isEmpty()) {
+                Item it94 = o2.itemBuys.removeFirst();
                 int toX = Util.gI().nextInt(boss.cx - 70, boss.cx + 70);
                 int toY = zone.mapTemplate.touchY(toX, boss.cy);
                 ItemMap itemMap = zone.addItemMap(charId, it94, toX, toY, 0, -1);
